# COSMIC_RAY_GENERATOR

./: CMakeLists.txt  README.md
src/: main.cc
src/src/: Settings.hh  cosmic_ray_generator_PARMA.cc  cosmic_ray_generator_PARMA.hh  myUtils.cc  myUtils.hh
src/src/parma2/: main-generator.f90  subroutines.f90
src/src/parma2/GeneOut/: flux.out  generation.out
src/src/parma2/input/: FFPtable.day
